Smart UV project problem with non-manifold geometry [worked in 2.90.1] #82637

Closed
opened 2020-11-12 04:33:34 +01:00 by Chipp Walters · 14 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-11-11 21:24, hash: b99faa0f56
Worked: 2.90.1 released

Short description of error
Smart UV project STILL doesn't work (I know it was supposedly fixed on 11/11, but I've tested it on that version)

Exact steps for others to reproduce the error
tire-bad-smartUVproject.blend
Please see this YT video:
https://youtu.be/WAaaKY6Adiw
Open file
Try and SmartUV project the UVs for the tire object
They are all over the place.
Check the same on 2.90.1 and you will see it works just fine.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-11-11 21:24, hash: `b99faa0f56` Worked: 2.90.1 released **Short description of error** Smart UV project STILL doesn't work (I know it was supposedly fixed on 11/11, but I've tested it on that version) **Exact steps for others to reproduce the error** [tire-bad-smartUVproject.blend](https://archive.blender.org/developer/F9263053/tire-bad-smartUVproject.blend) Please see this YT video: https://youtu.be/WAaaKY6Adiw Open file Try and SmartUV project the UVs for the tire object They are all over the place. Check the same on 2.90.1 and you will see it works just fine.
Author

Added subscriber: @chippwalters

Added subscriber: @chippwalters
Member

Added subscribers: @ideasman42, @Alaska

Added subscribers: @ideasman42, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this issue on Blender version 2.92.0 Alpha f284a40385 (2020-11-12 01:30)

CC @ideasman42 as I believe you worked on the recent changes to the Smart UV system.

I can confirm this issue on Blender version 2.92.0 Alpha `f284a40385` (2020-11-12 01:30) CC @ideasman42 as I believe you worked on the recent changes to the Smart UV system.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Seems to have problems with non-manifold geometry.

Dare setting this to High (since this is a regression from 2.90)

Seems to have problems with non-manifold geometry. Dare setting this to High (since this is a regression from 2.90)
Philipp Oeser changed title from Smart UV project still not working to Smart UV project problem with non-manifold geometry [worked in 2.90.1] 2020-11-12 16:45:41 +01:00

Note that this is an existing bug in UV-packing, functionality which smart-uv project is calling.

Note that this is an existing bug in UV-packing, functionality which smart-uv project is calling.
Author

In #82637#1053721, @ideasman42 wrote:
Note that this is an existing bug in UV-packing, functionality which smart-uv project is calling.

Not sure I understand, it doesn't show up in 2.90, so how is it existing?

> In #82637#1053721, @ideasman42 wrote: > Note that this is an existing bug in UV-packing, functionality which smart-uv project is calling. Not sure I understand, it doesn't show up in 2.90, so how is it existing?
Member

Smart UV was rewritten in C in 2.91 [but apparently reusing existing C packing] so this is why this was not an issue in 2.90 [where this was all python]

Smart UV was rewritten in C in 2.91 [but apparently reusing existing C packing] so this is why this was not an issue in 2.90 [where this was all python]

This issue was referenced by 9296ba8674

This issue was referenced by 9296ba867462f7ff3c55bc0c9129af4121243bed

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-11-17 14:27:33 +01:00
Author

What daily build will the fix be in so I can test?

What daily build will the fix be in so I can test?
Member

In #82637#1056294, @chippwalters wrote:
What daily build will the fix be in so I can test?

It should be included in the daily build available now.

> In #82637#1056294, @chippwalters wrote: > What daily build will the fix be in so I can test? It should be included in the daily build available now.
Author

Thanks for fixing this. Huge help. Good job!!!
BTW, tested successfully :-)

Thanks for fixing this. Huge help. Good job!!! BTW, tested successfully :-)
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82637
No description provided.